kubernetes/apps/flux-system/flux-instance/httproute.yaml
---
# yaml-language-server: $schema=https://schemas.ajgon.casa/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: github-webhook
  annotations:
    gatus.home-operations.com/endpoint: |-
      conditions: ["[STATUS] == any(403, 404)"]
      url: "https://flux-webhook.${EXTERNAL_ROOT_DOMAIN}/hook/"
spec:
  hostnames:
    - "flux-webhook.${EXTERNAL_ROOT_DOMAIN}"
  parentRefs:
    - name: envoy-external
      namespace: network
  rules:
    - backendRefs:
        - name: webhook-receiver
          namespace: flux-system
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /hook/
