kubernetes/apps/flux-system/flux-instance/networkpolicy.yaml
---
# yaml-language-server: $schema=https://schemas.rzegocki.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: flux-instance-egress-internal
specs:
  - endpointSelector:
      matchLabels:
        app.kubernetes.io/part-of: flux
    egress:
      - toEntities:
          - kube-apiserver
      - toEndpoints:
          - {}
---
# yaml-language-server: $schema=https://schemas.rzegocki.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: flux-instance-source-egress-external
specs:
  - endpointSelector:
      matchLabels:
        app.kubernetes.io/component: source-controller
    egress:
      - toFQDNs:
          # signatures
          - matchName: tuf-repo-cdn.sigstore.dev
          # gitops repo
          - matchName: github.com

          # helm charts
          ## codeberg
          - matchName: codeberg.org
          ## forgejo
          - matchName: code.forgejo.org
          ## fluentbit
          - matchName: cr.fluentbit.io
          ## github
          - matchName: ghcr.io
          - matchName: pkg-containers.githubusercontent.com
          ## google container registry
          - matchName: mirror.gcr.io
          ## microsoft azure
          - matchName: gsoci.azurecr.io
          - matchPattern: "*.blob.core.windows.net"
          ## quay
          - matchName: quay.io
          - matchPattern: "cdn*.quay.io"
        toPorts:
          - ports:
              - port: "443"
---
# yaml-language-server: $schema=https://schemas.rzegocki.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: flux-instance-notification-egress-external
specs:
  - endpointSelector:
      matchLabels:
        app.kubernetes.io/component: notification-controller
    egress:
      - toFQDNs:
          # reconcilation status
          - matchName: api.github.com
        toPorts:
          - ports:
              - port: "443"
---
# yaml-language-server: $schema=https://schemas.rzegocki.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: flux-instance-kustomize-egress-external
specs:
  - endpointSelector:
      matchLabels:
        app.kubernetes.io/component: kustomize-controller
    egress:
      - toFQDNs:
          - matchName: github.com
          - matchName: release-assets.githubusercontent.com
        toPorts:
          - ports:
              - port: "443"
---
# yaml-language-server: $schema=https://schemas.rzegocki.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: flux-instance-notification-egress-observability
specs:
  - endpointSelector:
      matchLabels:
        app.kubernetes.io/component: notification-controller
    egress:
      - toEndpoints:
          - matchLabels:
              app.kubernetes.io/name: alertmanager
